--- a/1004 web app/wwwroot/index.html
+++ b/1004 web app/wwwroot/index.html
@@ -11,6 +11,66 @@
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
-    <h1> welcome </h1>
+
+    <div class="container">
+
+        <nav class="navbar fixed-top bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">CYPER</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav" class="text-light">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Features</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Pricing</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link disabled">Disabled</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </div>
+
+    <div id="page-content-wrapper" class="col-8 pl-0">
+        <div class="jumbotron bg-cover" style="background-image: url(img/trees1.jpg)">
+            <div class="container">
+                <p class="text-dark">Welcome</p>
+                <p class="lead font-weight-bold"></p>
+            </div>
+        </div>
+    </div>
+
+
+    <style>
+        .footer {
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            /* Set the fixed height of the footer here */
+            height: 60px;
+            line-height: 60px; /* Vertically center the text there */
+            background-color: #f5f5f5;
+        }
+    </style>
+
+
+    <footer class="footer">
+        <div class="container">
+            <span class="text-muted">
+                CYPER
+            </span>
+        </div>
+    </footer>
+
 </body>
+
 </html>
