--- a/1004 web app/wwwroot/index.html
+++ b/1004 web app/wwwroot/index.html
@@ -34,17 +34,17 @@ XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V
 
     <div class="container">
 
-        <nav class="navbar fixed-top bg-dark">
+        <nav class="navbar fixed-top bg-light">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">CYPER</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
-                <div class="collapse navbar-collapse" id="navbarNav" class="text-light">
+                <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#" id="index">Home</a>
+                            <a class="nav-link active" aria-current="page" href="#" id="index" class="text-white">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="map.html" id="map">Map</a>
